[tool.poetry]
name = "building-plot"
version = "0.1.0"
description = ""
authors = ["Dawid Śmiech <dawid.smiech@schibsted.com>"]
readme = "README.md"
packages = [{include = "building_plot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests-html = "^0.10.0"
requests = "^2.28.2"
geopy = "^2.3.0"
typer = "^0.7.0"
rich = "^13.3.1"
beanie = "^1.17.0"
structlog = "^22.3.0"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
